<resources>
    <string name="app_name">GitHubApp2</string>
    <string name="search">Search Username</string>
    <string name="find">cari</string>
    <string name="avatar_user">Avatar User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="photo_profile_user">Photo Profile User</string>
    <string name="location">Location User</string>
    <string name="company">Company User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>